--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <title>Research & Preservation Works — Mariana Torres</title>
+  <title>Mariana Torres – Audiovisual Archivist & Moving Image Practitioner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
   <style>
     :root {
-      --text: #f5f5f5;
-      --muted: #a6a9b5;
+      --bg-soft: #090b10;
+      --text-main: #f5f5f5;
+      --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max: 1100px;
+      --max-width: 1100px;
     }
 
-    html, body {
-      height: 100%;
-    }
-
+    /* BACKGROUND GIF */
     body {
       margin: 0;
-      background: url('Timeline2.gif.gif') center/cover fixed no-repeat;
-      color: var(--text);
+      padding: 0;
+      min-height: 100vh;
+      background: url('Timeline2.gif.gif') center/cover no-repeat fixed;
+      color: var(--text-main);
       font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
     }
@@ -43,40 +45,40 @@
     }
 
     nav {
-      max-width: var(--max);
+      max-width: var(--max-width);
       margin: 0 auto;
       height: 100%;
       padding: 0 20px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
     }
 
     .brand {
       font-family: "Bebas Kai";
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       letter-spacing: 0.16em;
-      color: var(--text);
+      color: var(--text-main);
       text-decoration: none;
     }
 
     .menu {
       list-style: none;
-      margin: 0;
-      padding: 0;
       display: flex;
       gap: 22px;
-      align-items: center;
-      color: var(--muted);
+      margin: 0;
+      padding: 0;
       font-size: 0.92rem;
+      color: var(--text-muted);
+      align-items: center;
     }
 
     .menu a {
       color: inherit;
       text-decoration: none;
-      white-space: nowrap;
-      padding-bottom: 2px;
       position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
     }
 
     .menu a:hover {
@@ -88,8 +90,8 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      height: 1px;
       width: 0%;
+      height: 1px;
       background: var(--accent);
       transition: width 0.2s;
     }
@@ -107,11 +109,11 @@
       position: absolute;
       top: 26px;
       left: 0;
+      min-width: 220px;
       background: rgba(5, 6, 8, 0.97);
       border: 1px solid rgba(255, 255, 255, 0.1);
-      list-style: none;
       padding: 10px 0;
-      min-width: 220px;
+      list-style: none;
       z-index: 999;
     }
 
@@ -123,77 +125,52 @@
       padding: 4px 14px;
     }
 
-    .dropdown-content a {
-      color: var(--muted);
+    .dropdown-content li a {
       display: block;
+      color: var(--text-muted);
     }
 
-    .dropdown-content a:hover {
+    .dropdown-content li a:hover {
       color: var(--accent);
       background: rgba(255, 255, 255, 0.06);
     }
 
-    .caret {
-      font-size: 0.85em;
-      opacity: 0.6;
-      margin-left: 4px;
-    }
-
-    /* HERO */
+    /* HERO SECTION */
     .hero {
-      padding: 150px 20px 30px;
+      padding-top: 150px;
+      padding-bottom: 90px;
       text-align: center;
-      max-width: 720px;
+      max-width: 740px;
       margin: 0 auto;
     }
 
     .hero h1 {
       font-family: "Bebas Kai";
-      font-size: 3rem;
-      letter-spacing: 0.12em;
-      margin-bottom: 0.4rem;
+      font-size: 3.3rem;
+      letter-spacing: 0.13em;
+      margin-bottom: 0.3rem;
     }
 
-    .hero p {
-      color: var(--muted);
-      font-size: 1.05rem;
-      margin-top: 0.3rem;
+    .hero-sub {
+      color: var(--text-muted);
+      margin-bottom: 1.4rem;
+      font-size: 1.18rem;
     }
 
-    /* PAGE STRUCTURE */
-    .wrapper {
-      max-width: var(--max);
-      margin: 0 auto;
-      padding: 0 20px 80px;
+    .hero-text-box {
+      background: rgba(5, 6, 8, 0.55);
+      padding: 18px 26px;
+      border-radius: 6px;
+      backdrop-filter: blur(3px);
+      margin-bottom: 14px;
     }
 
-    .card {
-      background: rgba(8, 10, 14, 0.32);
-      border: 1px solid rgba(255, 255, 255, 0.10);
-      backdrop-filter: blur(2px);
-      border-radius: 10px;
-      padding: 18px 20px 16px;
-      margin: 22px 0;
+    .hero-text {
+      font-size: 1.06rem;
+      line-height: 1.75;
+      margin: 0;
     }
 
-    .card h2 {
-      font-family: "Bebas Kai";
-      font-size: 1.55rem;
-      letter-spacing: 0.1em;
-      margin: 0 0 0.5rem;
-      color: var(--accent);
-    }
-
-    .card p,
-    .card li {
-      color: var(--muted);
-      line-height: 1.7;
-      font-size: 1.02rem;
-    }
-
-    ul {
-      margin: 0.4rem 0 0.2rem 1.1rem;
-    }
   </style>
 </head>
 
@@ -208,15 +185,15 @@
         <li><a href="about.html">About</a></li>
 
         <li class="dropdown">
-          <a href="projects.html">Projects <span class="caret">▾</span></a>
+          <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
             <li><a href="artistic-works.html">Artistic Works</a></li>
-            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+            <li><a href="research-preservation.html">Research & Preservation Works</a></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="analogue-film.html">Analogue Film Practice <span class="caret">▾</span></a>
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
           <ul class="dropdown-content">
             <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
             <li><a href="technical-documentation.html">Technical Documentation</a></li>
@@ -224,60 +201,32 @@
           </ul>
         </li>
 
-        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+        <li><a href="writing-publications.html">Writing & Publications</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- HERO -->
   <section class="hero">
-    <h1>RESEARCH & PRESERVATION WORKS</h1>
-    <p>Archival study · reconstruction · cataloguing · historical research</p>
+    <h1>MARIANA TORRES</h1>
+    <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
+
+    <div class="hero-text-box">
+      <p class="hero-text">
+        I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and
+        <strong>moving image practice</strong>. My interests cross preservation, projection,
+        photochemical experimentation and the afterlives of militant and countercultural cinema.
+      </p>
+    </div>
+
+    <div class="hero-text-box">
+      <p class="hero-text">
+        This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
+        and <strong>analogue film practice</strong>, alongside documentation of projects
+        developed with archives, festivals and cultural institutions.
+      </p>
+    </div>
   </section>
 
-  <!-- MAIN CONTENT -->
-  <main class="wrapper">
-
-    <section class="card">
-      <h2>Archival Investigations</h2>
-      <p>
-        Research projects carried out within film archives, involving identification,
-        inspection, cataloguing and contextual analysis of analogue film materials.
-      </p>
-      <ul>
-        <li>Filmographic reconstruction based on incomplete or fragmentary reels.</li>
-        <li>Inspection reports: shrinkage, perforation damage, base type, sound formats.</li>
-        <li>Contextual research on militant, countercultural and orphan film collections.</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>Preservation & Restoration Processes</h2>
-      <p>
-        Workflows documenting the steps involved in stabilising, duplicating and preparing
-        film elements for digitisation or photochemical preservation.
-      </p>
-      <ul>
-        <li>Cleaning and repair of film elements prior to scanning or duplication.</li>
-        <li>Registry of printer-lights, shrinkage measurements and splice types.</li>
-        <li>Collaborative preservation projects with institutions and film labs.</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>Case Studies & Research Notes</h2>
-      <p>
-        Notes from ongoing investigations into Portuguese and international archives,
-        including unfinished films, activist cinema and alternative film cultures.
-      </p>
-      <ul>
-        <li>Reconstruction notes for incomplete or abandoned film projects.</li>
-        <li>Analysis of archival metadata and provenance documentation.</li>
-        <li>Comparative study between analogue and digital reconstruction strategies.</li>
-      </ul>
-    </section>
-
-  </main>
 </body>
-
 </html>
