--- a/research-preservation.html
+++ b/research-preservation.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <title>Research & Preservation Works — Mariana Torres</title>
+  <title>Artistic Works – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
@@ -12,24 +11,24 @@
 
   <style>
     :root {
-      --text: #f5f5f5;
-      --muted: #a6a9b5;
+      --bg-soft: #090b10;
+      --text-main: #f5f5f5;
+      --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max: 1100px;
-    }
-
-    html, body {
-      height: 100%;
+      --max-width: 1100px;
     }
 
     body {
       margin: 0;
-      color: var(--text);
+      padding: 0;
+      background: #050608;
+      color: var(--text-main);
       font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
     }
 
-    /* HEADER */
+    /* ---------------- HEADER ---------------- */
+
     header {
       position: fixed;
       top: 0;
@@ -42,40 +41,40 @@
     }
 
     nav {
-      max-width: var(--max);
+      max-width: var(--max-width);
       margin: 0 auto;
       height: 100%;
       padding: 0 20px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
     }
 
     .brand {
       font-family: "Bebas Kai";
-      font-size: 1.15rem;
-      letter-spacing: 0.16em;
-      color: var(--text);
+      font-size: 1.2rem;
+      letter-spacing: 0.17em;
+      color: var(--text-main);
       text-decoration: none;
     }
 
     .menu {
       list-style: none;
-      margin: 0;
-      padding: 0;
       display: flex;
       gap: 22px;
-      align-items: center;
-      color: var(--muted);
+      margin: 0;
+      padding: 0;
       font-size: 0.92rem;
+      color: var(--text-muted);
+      align-items: center;
     }
 
     .menu a {
       color: inherit;
       text-decoration: none;
-      white-space: nowrap;
-      padding-bottom: 2px;
       position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
     }
 
     .menu a:hover {
@@ -87,8 +86,8 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      height: 1px;
       width: 0%;
+      height: 1px;
       background: var(--accent);
       transition: width 0.2s;
     }
@@ -97,6 +96,7 @@
       width: 100%;
     }
 
+    /* Dropdowns */
     .dropdown {
       position: relative;
     }
@@ -106,99 +106,131 @@
       position: absolute;
       top: 26px;
       left: 0;
+      min-width: 220px;
       background: rgba(5, 6, 8, 0.97);
       border: 1px solid rgba(255, 255, 255, 0.1);
-      list-style: none;
       padding: 10px 0;
-      min-width: 220px;
+      list-style: none;
       z-index: 999;
+    }
+
+    .dropdown-content li {
+      padding: 4px 14px;
+      white-space: nowrap;
+    }
+
+    .dropdown-content li a {
+      display: block;
+      color: var(--text-muted);
+    }
+
+    .dropdown-content li a:hover {
+      color: var(--accent);
+      background: rgba(255, 255, 255, 0.06);
     }
 
     .dropdown:hover .dropdown-content {
       display: block;
     }
 
-    .dropdown-content li {
-      padding: 4px 14px;
-    }
+    /* ---------------- PAGE STRUCTURE ---------------- */
 
-    .dropdown-content a {
-      color: var(--muted);
-      display: block;
-    }
-
-    .dropdown-content a:hover {
-      color: var(--accent);
-      background: rgba(255, 255, 255, 0.06);
-    }
-
-    .caret {
-      font-size: 0.85em;
-      opacity: 0.6;
-      margin-left: 4px;
-    }
-
-    /* HERO */
-    .hero {
-      padding: 150px 20px 30px;
-      text-align: center;
-      max-width: 720px;
+   .page-wrapper {
+      padding-top: 130px; /* space for fixed header */
+      max-width: var(--max-width);
       margin: 0 auto;
+      padding-left: 20px;
+      padding-right: 20px;
     }
 
-    .hero h1 {
+    h1 {
       font-family: "Bebas Kai";
-      font-size: 3rem;
+      font-size: 2.8rem;
       letter-spacing: 0.12em;
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.6rem;
+      text-align: center;
     }
 
-    .hero p {
-      color: var(--muted);
+    .intro-text {
+      text-align: center;
+      color: var(--text-muted);
+      max-width: 760px;
+      margin: 0 auto 50px;
       font-size: 1.05rem;
-      margin-top: 0.3rem;
+      line-height: 1.75;
     }
 
-    /* PAGE STRUCTURE */
-    .wrapper {
-      max-width: var(--max);
-      margin: 0 auto;
-      padding: 0 20px 80px;
+    /* Project Blocks */
+    .project-item {
+      margin-bottom: 70px;
+      border-left: 1px solid rgba(255,255,255,0.06);
+      padding-left: 22px;
     }
 
-    .card {
-      background: rgba(8, 10, 14, 0.32);
-      border: 1px solid rgba(255, 255, 255, 0.10);
-      backdrop-filter: blur(2px);
-      border-radius: 10px;
-      padding: 18px 20px 16px;
-      margin: 22px 0;
-    }
-
-    .card h2 {
+    .project-item h2 {
       font-family: "Bebas Kai";
-      font-size: 1.55rem;
-      letter-spacing: 0.1em;
-      margin: 0 0 0.5rem;
-      color: var(--accent);
+      letter-spacing: 0.08em;
+      margin-bottom: 0.3rem;
+      font-size: 1.9rem;
     }
 
-    .card p,
-    .card li {
-      color: var(--muted);
+    .project-meta {
+      color: var(--text-muted);
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+    }
+
+    .project-item p {
+      font-size: 1rem;
       line-height: 1.7;
-      font-size: 1.02rem;
+      margin-bottom: 1rem;
     }
 
-    ul {
-      margin: 0.4rem 0 0.2rem 1.1rem;
+    .project-image {
+      margin-top: 20px;
+      max-width: 100%;
+      border-radius: 6px;
+      opacity: 0.9;
     }
+    /* --- Media Blocks for Artistic Works --- */
+
+.media-block {
+  max-width: 900px;
+  margin: 0 auto 45px;
+}
+
+.media-block img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 6px;
+  margin-bottom: 25px;
+}
+
+/* Vimeo video same size as images */
+.video-fixed {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 ratio */
+  margin-bottom: 25px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.video-fixed iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
   </style>
 </head>
 
 <body>
 
-  <!-- HEADER -->
+  <!-- ---------------- HEADER ---------------- -->
   <header>
     <nav>
       <a href="index.html" class="brand">MARIANA TORRES</a>
@@ -207,15 +239,15 @@
         <li><a href="about.html">About</a></li>
 
         <li class="dropdown">
-          <a href="projects.html">Projects <span class="caret">▾</span></a>
+          <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
             <li><a href="artistic-works.html">Artistic Works</a></li>
-            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+            <li><a href="research-preservation.html">Research & Preservation Works</a></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="analogue-film.html">Analogue Film Practice <span class="caret">▾</span></a>
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
           <ul class="dropdown-content">
             <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
             <li><a href="technical-documentation.html">Technical Documentation</a></li>
@@ -223,60 +255,70 @@
           </ul>
         </li>
 
-        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+        <li><a href="writing-publications.html">Writing & Publications</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>RESEARCH & PRESERVATION WORKS</h1>
-    <p>Archival study · reconstruction · cataloguing · historical research</p>
-  </section>
 
-  <!-- MAIN CONTENT -->
-  <main class="wrapper">
+  <!-- ---------------- CONTENT ---------------- -->
+  <div class="page-wrapper">
 
-    <section class="card">
-      <h2>Archival Investigations</h2>
+    <h1>ARTISTIC WORKS</h1>
+
+    <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
+
+    <div class="project-item">
+      <h2>Send Me a Color</h2>
+      <div class="project-meta">16mm Performance · 2024</div>
+
       <p>
-        Research projects carried out within film archives, involving identification,
-        inspection, cataloguing and contextual analysis of analogue film materials.
-      </p>
-      <ul>
-        <li>Filmographic reconstruction based on incomplete or fragmentary reels.</li>
-        <li>Inspection reports: shrinkage, perforation damage, base type, sound formats.</li>
-        <li>Contextual research on militant, countercultural and orphan film collections.</li>
-      </ul>
-    </section>
+        A chromatic performance for multiple projectors exploring color separation, refraction
+        and the physical gestures of projection. Developed through duplication experiments
+        and optical filters.
+    </p>
+  </p>
 
-    <section class="card">
-      <h2>Preservation & Restoration Processes</h2>
+ <section class="media-block">
+
+  <!-- IMAGEM 1 -->
+  <img src="pag1 (2).png" alt="Send Me a Color – image 1">
+
+  <!-- VÍDEO VIMEO (MESMAS DIMENSÕES) -->
+  <div class="video-fixed">
+    <iframe
+      src="https://vimeo.com/1081106970/70594f4e3f?share=copy&fl=sv&fe=ci"
+      allow="autoplay; fullscreen; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <!-- IMAGEM 2 -->
+  <img src="pag3.png" alt="Send Me a Color – image 2">
+
+  <!-- IMAGEM 3 -->
+  <img src="pag4.png" alt="Send Me a Color – image 3">
+
+</section>
+
+</section>
+
+    </div>
+
+
+    <div class="project-item">
+      <h2>[Title of Artistic Work #2]</h2>
+      <div class="project-meta">Format · Year</div>
+
       <p>
-        Workflows documenting the steps involved in stabilising, duplicating and preparing
-        film elements for digitisation or photochemical preservation.
+        Description text here — you can duplicate this block to add more artworks. 
+        Each project can include stills, notes, links to video, installation views, etc.
       </p>
-      <ul>
-        <li>Cleaning and repair of film elements prior to scanning or duplication.</li>
-        <li>Registry of printer-lights, shrinkage measurements and splice types.</li>
-        <li>Collaborative preservation projects with institutions and film labs.</li>
-      </ul>
-    </section>
+    </div>
 
-    <section class="card">
-      <h2>Case Studies & Research Notes</h2>
-      <p>
-        Notes from ongoing investigations into Portuguese and international archives,
-        including unfinished films, activist cinema and alternative film cultures.
-      </p>
-      <ul>
-        <li>Reconstruction notes for incomplete or abandoned film projects.</li>
-        <li>Analysis of archival metadata and provenance documentation.</li>
-        <li>Comparative study between analogue and digital reconstruction strategies.</li>
-      </ul>
-    </section>
 
-  </main>
+    <!-- Add more project blocks the same way -->
+  </div>
+
 </body>
-
 </html>
