--- a/research-preservation.html
+++ b/research-preservation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Artistic Works – Mariana Torres</title>
+  <title>Send Me a Color – Mariana Torres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts -->
@@ -96,7 +96,6 @@
       width: 100%;
     }
 
-    /* Dropdowns */
     .dropdown {
       position: relative;
     }
@@ -133,98 +132,59 @@
       display: block;
     }
 
-    /* ---------------- PAGE STRUCTURE ---------------- */
+    /* ---------------- PAGE LAYOUT ---------------- */
 
-   .page-wrapper {
-      padding-top: 130px; /* space for fixed header */
+    .page-wrapper {
+      padding-top: 130px; /* deixa espaço para o header fixo */
       max-width: var(--max-width);
       margin: 0 auto;
       padding-left: 20px;
       padding-right: 20px;
+      padding-bottom: 60px;
     }
 
-    h1 {
-      font-family: "Bebas Kai";
-      font-size: 2.8rem;
-      letter-spacing: 0.12em;
-      margin-bottom: 0.6rem;
-      text-align: center;
+    /* Media layout para as imagens + vídeo */
+
+    .media-block {
+      max-width: 900px;
+      margin: 0 auto;
     }
 
-    .intro-text {
-      text-align: center;
-      color: var(--text-muted);
-      max-width: 760px;
-      margin: 0 auto 50px;
-      font-size: 1.05rem;
-      line-height: 1.75;
+    .media-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 24px;
     }
 
-    /* Project Blocks */
-    .project-item {
-      margin-bottom: 70px;
-      border-left: 1px solid rgba(255,255,255,0.06);
-      padding-left: 22px;
+    @media (min-width: 900px) {
+      .media-grid {
+        grid-template-columns: 1fr 1fr;
+      }
     }
 
-    .project-item h2 {
-      font-family: "Bebas Kai";
-      letter-spacing: 0.08em;
-      margin-bottom: 0.3rem;
-      font-size: 1.9rem;
-    }
-
-    .project-meta {
-      color: var(--text-muted);
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-    }
-
-    .project-item p {
-      font-size: 1rem;
-      line-height: 1.7;
-      margin-bottom: 1rem;
-    }
-
-    .project-image {
-      margin-top: 20px;
-      max-width: 100%;
+    .media-cell img {
+      width: 100%;
+      height: auto;
+      display: block;
       border-radius: 6px;
-      opacity: 0.9;
     }
-    /* --- Media Blocks for Artistic Works --- */
 
-.media-block {
-  max-width: 900px;
-  margin: 0 auto 45px;
-}
+    /* Vídeo Vimeo com proporção fixa 16:9 */
+    .video-fixed {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 */
+      border-radius: 6px;
+      overflow: hidden;
+    }
 
-.media-block img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 6px;
-  margin-bottom: 25px;
-}
-
-/* Vimeo video same size as images */
-.video-fixed {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; /* 16:9 ratio */
-  margin-bottom: 25px;
-  border-radius: 6px;
-  overflow: hidden;
-}
-
-.video-fixed iframe {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
+    .video-fixed iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
 </head>
 
@@ -260,64 +220,35 @@
     </nav>
   </header>
 
-
   <!-- ---------------- CONTENT ---------------- -->
   <div class="page-wrapper">
+    <section class="media-block">
+      <div class="media-grid">
+        <!-- TOPO: IMG1 + VÍDEO LADO A LADO EM ECRÃ GRANDE -->
+        <div class="media-cell">
+          <img src="color1.png" alt="Send Me a Color – image 1" />
+        </div>
 
-    <h1>ARTISTIC WORKS</h1>
+        <div class="media-cell">
+          <div class="video-fixed">
+            <iframe
+              src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+        </div>
 
-    <!-- ---------- PROJECT TEMPLATE (copy/paste for each work) ---------- -->
+        <!-- BAIXO: IMG2 + IMG3 -->
+        <div class="media-cell">
+          <img src="color2.png" alt="Send Me a Color – image 2" />
+        </div>
 
-    <div class="project-item">
-      <h2>Send Me a Color</h2>
-      <div class="project-meta">16mm Performance · 2024</div>
-
-      <p>
-        A chromatic performance for multiple projectors exploring color separation, refraction
-        and the physical gestures of projection. Developed through duplication experiments
-        and optical filters.
-    </p>
-  </p>
-
- <section class="media-block">
-
-  <!-- IMAGEM 1 -->
-  <img src="pag1 (2).png" alt="Send Me a Color – image 1">
-
-  <!-- VÍDEO VIMEO (MESMAS DIMENSÕES) -->
-  <div class="video-fixed">
-    <iframe
-      src="https://vimeo.com/1081106970/70594f4e3f?share=copy&fl=sv&fe=ci"
-      allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-  </div>
-
-  <!-- IMAGEM 2 -->
-  <img src="pag3.png" alt="Send Me a Color – image 2">
-
-  <!-- IMAGEM 3 -->
-  <img src="pag4.png" alt="Send Me a Color – image 3">
-
-</section>
-
-</section>
-
-    </div>
-
-
-    <div class="project-item">
-      <h2>[Title of Artistic Work #2]</h2>
-      <div class="project-meta">Format · Year</div>
-
-      <p>
-        Description text here — you can duplicate this block to add more artworks. 
-        Each project can include stills, notes, links to video, installation views, etc.
-      </p>
-    </div>
-
-
-    <!-- Add more project blocks the same way -->
+        <div class="media-cell">
+          <img src="color3.png" alt="Send Me a Color – image 3" />
+        </div>
+      </div>
+    </section>
   </div>
 
 </body>
