--- a/artistic-works.html
+++ b/artistic-works.html
@@ -7,7 +7,10 @@
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
   <style>
     :root {
@@ -15,7 +18,7 @@
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 1100px;
+      --max-width: 1200px;
     }
 
     body {
@@ -132,48 +135,49 @@
       display: block;
     }
 
-    /* ---------------- PAGE LAYOUT ---------------- */
+    /* ---------------- PAGE STRUCTURE ---------------- */
 
     .page-wrapper {
-      padding-top: 130px; /* deixa espaço para o header fixo */
+      padding-top: 130px; /* espaço para o header fixo */
+      padding-bottom: 80px;
       max-width: var(--max-width);
       margin: 0 auto;
       padding-left: 20px;
       padding-right: 20px;
-      padding-bottom: 60px;
     }
 
-    /* Media layout para as imagens + vídeo */
+    h1 {
+      font-family: "Bebas Kai";
+      font-size: 2.8rem;
+      letter-spacing: 0.12em;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+
+    /* --- Media Blocks for Artistic Works --- */
 
     .media-block {
-      max-width: 900px;
+      max-width: 1200px;
       margin: 0 auto;
     }
 
-    .media-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 24px;
-    }
-
-    @media (min-width: 900px) {
-      .media-grid {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-
-    .media-cell img {
+    .media-block img {
       width: 100%;
       height: auto;
       display: block;
       border-radius: 6px;
     }
 
-    /* Vídeo Vimeo com proporção fixa 16:9 */
+    .media-block img + img {
+      margin-top: 0; /* evitamos margem dupla com o grid */
+    }
+
+    /* Vimeo video com mesma largura das imagens */
     .video-fixed {
       position: relative;
       width: 100%;
       padding-bottom: 56.25%; /* 16:9 */
+      margin: 26px 0;
       border-radius: 6px;
       overflow: hidden;
     }
@@ -184,6 +188,31 @@
       width: 100%;
       height: 100%;
       border: none;
+    }
+
+    /* Grid para as duas imagens de baixo */
+    .media-row {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 24px;
+      margin-top: 26px;
+    }
+
+    .media-row img {
+      width: 100%;
+      height: auto;
+      border-radius: 6px;
+    }
+
+    @media (max-width: 800px) {
+      .media-row {
+        grid-template-columns: 1fr;
+      }
+
+      h1 {
+        font-size: 2.3rem;
+        letter-spacing: 0.08em;
+      }
     }
   </style>
 </head>
@@ -201,7 +230,7 @@
         <li class="dropdown">
           <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="artistic-works.html">Send Me a Color</a></li>
             <li><a href="research-preservation.html">Research & Preservation Works</a></li>
           </ul>
         </li>
@@ -221,35 +250,31 @@
   </header>
 
   <!-- ---------------- CONTENT ---------------- -->
-  <div class="page-wrapper">
-    <section class="media-block">
-      <div class="media-grid">
-        <!-- TOPO: IMG1 + VÍDEO LADO A LADO EM ECRÃ GRANDE -->
-        <div class="media-cell">
-          <img src="color1.png" alt="Send Me a Color – image 1" />
-        </div>
+  <main class="page-wrapper">
+    <h1>SEND ME A COLOR</h1>
 
-        <div class="media-cell">
-          <div class="video-fixed">
-            <iframe
-              src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-          </div>
-        </div>
+    <div class="media-block">
 
-        <!-- BAIXO: IMG2 + IMG3 -->
-        <div class="media-cell">
-          <img src="color2.png" alt="Send Me a Color – image 2" />
-        </div>
+      <!-- IMAGEM 1 GRANDE -->
+      <img src="color1.png" alt="Send Me a Color – image 1" />
 
-        <div class="media-cell">
-          <img src="color3.png" alt="Send Me a Color – image 3" />
-        </div>
+      <!-- VÍDEO VIMEO (MESMA LARGURA) -->
+      <div class="video-fixed">
+        <iframe
+          src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen>
+        </iframe>
       </div>
-    </section>
-  </div>
+
+      <!-- IMAGENS 2 E 3 LADO A LADO -->
+      <div class="media-row">
+        <img src="color2.png" alt="Send Me a Color – image 2" />
+        <img src="color3.png" alt="Send Me a Color – image 3" />
+      </div>
+
+    </div>
+  </main>
 
 </body>
 </html>
