--- a/research-preservation.html
+++ b/research-preservation.html
@@ -266,7 +266,7 @@
         <li class="dropdown">
           <a href="projects.html">Projects ▾</a>
           <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="artistic-works.html">Send me a Colord</a></li>
             <li><a href="research-preservation.html">Research & Preservation Works</a></li>
           </ul>
         </li>
@@ -318,25 +318,32 @@
           </div>
         </div>
       </div>
-
-      <!-- IMAGENS EXTRA POR BAIXO (PODES ACRESCENTAR / TROCAR) -->
-      <div class="media-grid-bottom">
-        <!-- EXEMPLO IMAGEM EXTRA 1 -->
-        <img src="color3.png" alt="Additional still 1" />
-
-        <!-- EXEMPLO IMAGEM EXTRA 2 -->
-        <img src="color2.png" alt="Additional still 2" />
-      </div>
     </section>
 
     <!-- SE QUISERES MAIS PROJECTOS, DUPLICA ESTE BLOCO -->
     <section class="project-section">
-      <h2>[Another Research / Preservation Project]</h2>
+      <h2>C3 Non-Aligned Film Archives</h2>
       <p>
-        Aqui podes escrever uma breve descrição de outro trabalho de investigação ou preservação.
-        Podes duplicar esta secção e, se quiseres, abaixo dela voltar a usar uma estrutura
-        semelhante à media-block (imagem + vídeo + stills).
-      </p>
+     Research project committed to the preservation, restoration, and circulation of archives of a 
+        cinema in struggle against authoritarian narratives and models (colonial, state,
+        capitalist, patriarchal, etc.), a cinema that has struggled to exist, 
+        and still struggles not to disappear into the margins of dominant histories.
+     <p>
+        <section class="media-block">
+      <div class="media-grid-top">
+        <!-- LEFT: MAIN IMAGE (substitui o src pelo ficheiro que quiseres) -->
+        <div class="media-cell">
+          <img src="pag4.png" alt="Main still – Research & Preservation work" />
+        </div>
+
+        <!-- RIGHT: VIMEO VIDEO -->
+        <div class="media-cell">
+          <div class="video-fixed">
+            <iframe
+              src="https://player.vimeo.com/1081232328/6937280239"
+              allow="autoplay; fullscreen; picture-in-picture"
+              allowfullscreen>
+            </iframe>
     </section>
 
   </div>
