--- a/research-preservation.html
+++ b/research-preservation.html
@@ -166,46 +166,7 @@
 
     /* BLOCO PRINCIPAL: IMG + VÍDEO LADO A LADO */
 
-    .media-block {
-      max-width: 1000px;
-      margin: 0 auto 50px;
-    }
-
-    .media-grid-top {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 24px;
-      margin-bottom: 32px;
-    }
-
-    @media (min-width: 900px) {
-      .media-grid-top {
-        grid-template-columns: 1fr 1fr; /* imagem + vídeo lado a lado */
-      }
-    }
-
-    .media-cell img {
-      width: 120%;
-      height: auto;
-      display: block;
-      border-radius: 6px;
-    }
-
-    .video-fixed {
-      position: relative;
-      width: 120%;
-      padding-bottom: 56.25%; /* 16:9 */
-      border-radius: 6px;
-      overflow: hidden;
-    }
-
-    .video-fixed iframe {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+    vimeo.com/1081232328/6937280239
 
     /* IMAGENS EXTRA POR BAIXO (2 COLUNAS EM ECRÃ GRANDE) */
 
@@ -226,29 +187,6 @@
       height: auto;
       display: block;
       border-radius: 6px;
-    }
-
-    /* BLOCO PARA OUTROS PROJECTOS (VAZIO PARA TU PREENCHERES) */
-
-    .project-section {
-      max-width: 1000px;
-      margin: 60px auto 0;
-      border-top: 1px solid rgba(255,255,255,0.08);
-      padding-top: 32px;
-    }
-
-    .project-section h2 {
-      font-family: "Bebas Kai";
-      font-size: 1.8rem;
-      letter-spacing: 0.1em;
-      margin-bottom: 0.4rem;
-    }
-
-    .project-section p {
-      font-size: 0.98rem;
-      color: var(--text-muted);
-      line-height: 1.8;
-      max-width: 780px;
     }
   </style>
 </head>
