--- a/research-preservation.html
+++ b/research-preservation.html
@@ -164,31 +164,49 @@
       max-width: 780px;
     }
 
-    /* BLOCO PRINCIPAL: IMG + VÍDEO LADO A LADO */
+  /* Media layout para as imagens + vídeo — VERSÃO MAIOR */
 
-    vimeo.com/1081232328/6937280239
+.media-block {
+  max-width: 1200px;    /* ← AUMENTADO! */
+  margin: 0 auto;
+}
 
-    /* IMAGENS EXTRA POR BAIXO (2 COLUNAS EM ECRÃ GRANDE) */
+.media-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 32px;            /* mais espaçamento */
+}
 
-    .media-grid-bottom {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 24px;
-    }
+@media (min-width: 1100px) {
+  .media-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
-    @media (min-width: 900px) {
-      .media-grid-bottom {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
+.media-cell img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 6px;
+}
 
-    .media-grid-bottom img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 6px;
-    }
-  </style>
+/* Vídeo Vimeo com proporção 16:9 */
+.video-fixed {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 */
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.video-fixed iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+  <style>
 </head>
 
 <body>
